--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -242,6 +242,7 @@ jobs:
           source ${INSTALL_DIR}/setupvars.sh
 
           python3 -m pytest -sv ${INSTALL_TEST_DIR}/smoke_tests \
+            --ignore=${INSTALL_TEST_DIR}/smoke_tests/test_speech_sample.py \
             --env_conf ${INSTALL_TEST_DIR}/smoke_tests/env_config.yml \
             --junitxml=${INSTALL_TEST_DIR}/TEST-SamplesSmokeTests.xml
 
