--- a/cmake/templates/OpenVINODeveloperPackageConfig.cmake.in
+++ b/cmake/templates/OpenVINODeveloperPackageConfig.cmake.in
@@ -8,9 +8,18 @@ include(CMakeFindDependencyMacro)
 
 set(OV_RELOCATABLE_DEVELOPER_PACKAGE "@OV_RELOCATABLE_DEVELOPER_PACKAGE@")
 
-if(NOT OV_RELOCATABLE_DEVELOPER_PACKAGE)
+if(OV_RELOCATABLE_DEVELOPER_PACKAGE)
+    # OpenVINODevScripts is installed to current directory
+    set(OpenVINODevScripts_DIR "${CMAKE_CURRENT_LIST_DIR}")
+else()
     # OpenVINO_SOURCE_DIR is not available when we transter developer package to another machine
     set_and_check(OpenVINO_SOURCE_DIR "@OpenVINO_SOURCE_DIR@")
+    # path to cmake/developer_package
+    set(OpenVINODevScripts_DIR "${OpenVINO_SOURCE_DIR}/cmake/developer_package")
+    # extra arguments for find_package(OpenVINO)
+    set(OpenVINO_FIND_PACKAGE_ARGS PATHS "${CMAKE_CURRENT_LIST_DIR}"
+                                   NO_CMAKE_FIND_ROOT_PATH
+                                   NO_DEFAULT_PATH)
 endif()
 
 # Variables to export in plugin's projects
@@ -58,20 +67,16 @@ set(CMAKE_COMPILE_WARNING_AS_ERROR OFF)
 #
 
 find_dependency(OpenVINODevScripts
-                PATHS "${OpenVINO_SOURCE_DIR}/cmake/developer_package"
+                PATHS "${OpenVINODevScripts_DIR}"
                 NO_CMAKE_FIND_ROOT_PATH
                 NO_DEFAULT_PATH)
 
-find_dependency(OpenVINO
-                PATHS "${CMAKE_CURRENT_LIST_DIR}"
-                NO_CMAKE_FIND_ROOT_PATH
-                NO_DEFAULT_PATH)
+find_dependency(OpenVINO ${OpenVINO_FIND_PACKAGE_ARGS})
 
 _ov_find_tbb()
 _ov_find_pugixml()
 
 foreach(component @openvino_export_components@)
-    # TODO: remove legacy targets from some tests
     # string(FIND "${component}" "_legacy" index)
     # if (index EQUAL -1)
     include("${CMAKE_CURRENT_LIST_DIR}/ov_${component}_dev_targets.cmake")
@@ -107,3 +112,7 @@ ov_dev_package_no_errors()
 
 # Don't threat deprecated API warnings as errors in 3rd party apps
 ov_deprecated_no_errors()
+
+# unset temporary variables
+unset(OV_RELOCATABLE_DEVELOPER_PACKAGE)
+unset(OpenVINO_FIND_PACKAGE_ARGS)
