--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -544,6 +544,8 @@ jobs:
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
           export PYTHONPATH=${{ env.LAYER_TESTS_INSTALL_DIR }}:${{ env.INSTALL_TEST_DIR }}/python/openvino:$PYTHONPATH
           export DYLD_LIBRARY_PATH=${{ env.INSTALL_TEST_DIR }}:${{ env.INSTALL_TEST_DIR }}/python/openvino:$DYLD_LIBRARY_PATH
+          # TODO: remove setupvars.sh from here; currently, it's used for 'test_utils' installed in '<package>/python/openvino'
+          source ${INSTALL_DIR}/setupvars.sh
 
           python3 -m pytest ${{ env.LAYER_TESTS_INSTALL_DIR }}/mo_python_api_tests/ --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-test_mo_convert.xml
         env:
