--- a/src/tests/ov_helpers/ov_models/CMakeLists.txt
+++ b/src/tests/ov_helpers/ov_models/CMakeLists.txt
@@ -12,7 +12,8 @@ ov_add_target(
         ROOT ${PUBLIC_HEADERS_DIR}
         INCLUDES
             PUBLIC
-                ${PUBLIC_HEADERS_DIR}
+                "$<BUILD_INTERFACE:${PUBLIC_HEADERS_DIR}>"
+                "$<INSTALL_INTERFACE:developer_package/include/ov_models>"
         ADDITIONAL_SOURCE_DIRS
             ${CMAKE_CURRENT_SOURCE_DIR}/src
         LINK_LIBRARIES
@@ -31,3 +32,9 @@ ov_build_target_faster(${TARGET_NAME}
     UNITY
     PCH PRIVATE "src/precomp.hpp"
 )
+
+# install
+
+install(DIRECTORY "${PUBLIC_HEADERS_DIR}/"
+        DESTINATION developer_package/include/ov_models
+        COMPONENT developer_package EXCLUDE_FROM_ALL)
