--- a/cmake/templates/OpenVINODeveloperPackageConfig.cmake.in
+++ b/cmake/templates/OpenVINODeveloperPackageConfig.cmake.in
@@ -76,12 +76,7 @@ find_dependency(OpenVINO ${OpenVINO_FIND_PACKAGE_ARGS})
 _ov_find_tbb()
 _ov_find_pugixml()
 
-foreach(component @openvino_export_components@)
-    # string(FIND "${component}" "_legacy" index)
-    # if (index EQUAL -1)
-    include("${CMAKE_CURRENT_LIST_DIR}/ov_${component}_dev_targets.cmake")
-    # endif()
-endforeach()
+include("${CMAKE_CURRENT_LIST_DIR}/OpenVINOTargetsTargets.cmake")
 
 if(NOT OV_RELOCATABLE_DEVELOPER_PACKAGE)
     # inherit OpenCV from main OpenVINO project if enabled
