--- a/src/tests/test_utils/common_test_utils/CMakeLists.txt
+++ b/src/tests/test_utils/common_test_utils/CMakeLists.txt
@@ -38,11 +38,16 @@ function(add_common_utils ADD_TARGET_NAME)
                     openvino::shape_inference
                 INCLUDES
                     PUBLIC
-                        "${CMAKE_CURRENT_SOURCE_DIR}/include"
+                        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+                        "$<INSTALL_INTERFACE:developer_package/include/${ADD_TARGET_NAME}>"
                     PRIVATE
                         "${CMAKE_CURRENT_SOURCE_DIR}/src"
-
     )
+
+    # install
+    install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/"
+            DESTINATION developer_package/include/${ADD_TARGET_NAME}
+            COMPONENT developer_package EXCLUDE_FROM_ALL)
 
     if(ENABLE_CONFORMANCE_PGQL)
         target_compile_definitions(${ADD_TARGET_NAME} PUBLIC ENABLE_CONFORMANCE_PGQL)
@@ -58,28 +63,12 @@ function(add_common_utils ADD_TARGET_NAME)
         PCH PRIVATE "src/precomp.hpp"
     )
 
-    # detecting regex support
-    if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.9)
-        set(USE_BOOST_RE ON)
-    endif()
-    if (USE_BOOST_RE)
-        target_compile_definitions(${ADD_TARGET_NAME} PUBLIC USE_BOOST_RE)
-
-        debug_message(STATUS "Adding boost dependency")
-        if (CMAKE_VERBOSE_MAKEFILE)
-            set(Boost_DEBUG on)
-        endif ()
-        find_package(Boost REQUIRED COMPONENTS regex)
-        target_link_libraries(${ADD_TARGET_NAME} PUBLIC ${Boost_REGEX_LIBRARY})
-        target_include_directories(${ADD_TARGET_NAME} PUBLIC ${Boost_INCLUDE_DIRS})
-    endif ()
-
     target_include_directories(${ADD_TARGET_NAME}
         PUBLIC
             $<TARGET_PROPERTY:openvino::runtime,INTERFACE_INCLUDE_DIRECTORIES>
         PRIVATE
             $<TARGET_PROPERTY:openvino::runtime::dev,INTERFACE_INCLUDE_DIRECTORIES>)
-    target_include_directories(${ADD_TARGET_NAME} SYSTEM PUBLIC ${OV_TESTS_ROOT}/test_utils)
+    target_include_directories(${ADD_TARGET_NAME} SYSTEM PUBLIC "$<BUILD_INTERFACE:${OV_TESTS_ROOT}/test_utils>")
 
     target_compile_definitions(${ADD_TARGET_NAME} PUBLIC ${ARGN})
 
