--- a/src/tests/test_utils/functional_test_utils/CMakeLists.txt
+++ b/src/tests/test_utils/functional_test_utils/CMakeLists.txt
@@ -13,7 +13,8 @@ ov_add_target(
         tests
     INCLUDES
         PUBLIC
-        "${CMAKE_CURRENT_SOURCE_DIR}/include"
+            "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+            "$<INSTALL_INTERFACE:developer_package/include/func_test_utils>"
     ADDITIONAL_SOURCE_DIRS
         ${CMAKE_CURRENT_SOURCE_DIR}/src
     LINK_LIBRARIES
@@ -24,13 +25,17 @@ ov_add_target(
         PRIVATE
             ov_models
             openvino::pugixml
-    INCLUDES
-        PUBLIC
-            $<TARGET_PROPERTY:openvino::runtime::dev,INTERFACE_INCLUDE_DIRECTORIES>
 )
-
-install(DIRECTORY layer_tests_summary DESTINATION tests/functional_test_utils COMPONENT tests EXCLUDE_FROM_ALL)
 
 ov_build_target_faster(${TARGET_NAME}
     PCH PRIVATE "src/precomp.hpp"
 )
+
+# installation
+
+install(DIRECTORY layer_tests_summary DESTINATION tests/functional_test_utils
+        COMPONENT tests EXCLUDE_FROM_ALL)
+
+install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/include/"
+        DESTINATION developer_package/include/func_test_utils
+        COMPONENT developer_package EXCLUDE_FROM_ALL)
